--- a/setup.cfg
+++ b/setup.cfg
@@ -1,56 +1,7 @@
-[metadata]
-name             = statmoments
-author           = Anton Kochepasov
-author_email     = akss@me.com
-license          = MIT
-platforms        = any
-description      = Fast streaming single-pass univariate/bivariate statistics and t-test
-long_description = file: README.md
-long_description_content_type = text/markdown
-project_urls =
-    Source Code = https://github.com/akochepasov/statmoments/
-classifiers =
-  Development Status :: 5 - Production/Stable
-  Environment :: Console
-  Intended Audience :: Science/Research
-  Intended Audience :: Financial and Insurance Industry
-  License :: OSI Approved :: MIT License
-  Operating System :: OS Independent
-  Programming Language :: Cython
-  Programming Language :: Python
-  Programming Language :: Python :: 3
-  Programming Language :: Python :: 3.6
-  Programming Language :: Python :: 3.7
-  Programming Language :: Python :: 3.8
-  Programming Language :: Python :: 3.9
-  Programming Language :: Python :: 3.10
-  Programming Language :: Python :: 3.11
-  Programming Language :: Python :: 3.12
-  Topic :: Scientific/Engineering :: Artificial Intelligence
-  Topic :: Scientific/Engineering :: Image Processing
-  Topic :: Scientific/Engineering :: Information Analysis
-  Topic :: Scientific/Engineering :: Mathematics
-  Topic :: Scientific/Engineering :: Physics
-keywords =
-    data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
+# DEPRECATED: This file is maintained only for tool-specific configurations
+# that don't yet fully support pyproject.toml.
 
-[options]
-zip_safe = False
-packages = find:
-# still supports legacy builds
-optional_dependencies =
-  h5py
-  numpy>=1.17,<1.26
-  scipy<=1.15
-  psutil
-setup_requires =
-  cython
-  wheel
-tests_require =
-  pytest
-  pytest-cov
-  pytest-xdist
-
+# Flake8 configuration
 [flake8]
 ignore = E111,E114,E221,E241,E272
 per-file-ignores =
@@ -62,7 +13,12 @@ per-file-ignores =
 exclude =
 	.git,
 	__pycache__,
-	build
+	build,
+	dist,
+	*.egg-info,
+	.pytest_cache,
+	.venv,
+	venv
 max-line-length = 160
 statistics = yes
 
