--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -136,9 +136,47 @@ jobs:
           fail_ci_if_error: true
           files: ./coverage.xml
 
+  build-linux-manylinux-wheels:
+    name: Build manylinux wheels (Linux x86_64)
+    needs: lint
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: 'pip'
+
+      - name: Install cibuildwheel
+        run: |
+          python -m pip install --upgrade pip
+          pip install cibuildwheel
+
+      - name: Build manylinux wheels
+        env:
+          CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
+          CIBW_SKIP: pp* *musllinux*
+          CIBW_ARCHS_LINUX: x86_64
+          CIBW_BEFORE_BUILD: pip install --upgrade pip && pip install numpy cython build setuptools wheel
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+        run: |
+          python -m cibuildwheel --platform linux --output-dir dist
+
+      - name: Upload linux wheel artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: package-wheel-linux-manylinux
+          path: dist/*.whl
+          retention-days: 7
+
   collect-artifacts:
     name: Collect all artifacts
-    needs: [build-test-wheels, build-sdist]
+    needs: [build-test-wheels, build-sdist, build-linux-manylinux-wheels]
     runs-on: ubuntu-22.04
     steps:
       - name: Download all wheels
