--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ dynamic = ["version"]
 description = "Fast streaming single-pass univariate/bivariate statistics and t-test"
 requires-python = ">=3.8"
 readme = {file = "README.md", content-type = "text/markdown"}
-license = "MIT"
-license-files = ["LICENSE"]
+license = {file = "LICENSE"}
 authors = [
     {name = "Anton Kochepasov", email = "akss@me.com"}
 ]
@@ -89,6 +88,7 @@ dev = [
 
 [tool.setuptools]
 zip-safe = false
+license-files = ["LICENSE"]
 
 [tool.setuptools.packages.find]
 where = ["."]
