--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -159,7 +159,7 @@ jobs:
 
       - name: Build manylinux wheels
         env:
-          CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
+          CIBW_BUILD: cp38-* cp310-* cp312-*
           CIBW_SKIP: pp* *musllinux*
           CIBW_ARCHS_LINUX: x86_64
           CIBW_BEFORE_BUILD: pip install --upgrade pip && pip install numpy cython build setuptools wheel
