--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -162,7 +162,7 @@ jobs:
           CIBW_BUILD: cp38-* cp310-* cp312-*
           CIBW_ARCHS_LINUX: x86_64
           CIBW_BEFORE_BUILD: pip install --upgrade pip && pip install numpy cython build setuptools wheel
-          CIBW_TEST_REQUIRES: pytest numpy scipy h5py
+          CIBW_TEST_REQUIRES: pytest numpy scipy
           CIBW_TEST_COMMAND: python -c "import statmoments, numpy as np; import statmoments.univar as uv; uv.Univar(4,2,moment=2); print('smoke ok')"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
         run: |
