--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -160,12 +160,11 @@ jobs:
       - name: Build manylinux wheels
         env:
           CIBW_BUILD: cp38-* cp310-* cp312-*
-          CIBW_ARCHS_LINUX: x86_64 i686
+          CIBW_ARCHS_LINUX: x86_64
           CIBW_BEFORE_BUILD: pip install --upgrade pip && pip install numpy cython build setuptools wheel
           CIBW_TEST_REQUIRES: pytest numpy scipy
           CIBW_TEST_COMMAND: python -c "import statmoments, numpy as np; import statmoments.univar as uv; uv.Univar(4,2,moment=2); print('smoke ok')"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-          CIBW_MANYLINUX_I686_IMAGE: manylinux_2_28
         run: |
           python -m cibuildwheel --platform linux --output-dir dist
 
