--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -159,7 +159,7 @@ jobs:
 
       - name: Build manylinux wheels
         env:
-          CIBW_BUILD: cp38-* cp310-* cp312-*
+          CIBW_BUILD: cp38-manylinux_x86_64 cp310-manylinux_x86_64 cp312-manylinux_x86_64
           CIBW_ARCHS_LINUX: x86_64
           CIBW_BEFORE_BUILD: pip install --upgrade pip && pip install numpy cython build setuptools wheel
           CIBW_TEST_REQUIRES: pytest numpy scipy
